# Quantum_Deep_learning

./: README.md  main.py  my.ipynb  pyproject.toml  video-1.ipynb  video-2.ipynb  video-3.ipynb  video-4.ipynb
experiments/01_qcnn_mnist/: config.py  qcnn_vs_cnn_mnist.ipynb  readme.md
ml/: first.ipynb  fourth.ipynb  second.ipynb  third.ipynb  vqc_classifier.model  vqc_hyperparameter_results.csv  vqc_moons_adam.ipynb
notes/: ideas.md
results/logs/: 01_cnn_baseline_history.csv  01_qcnn_history.csv  01_summary.csv
results/models/: 01_qcnn_pennylane.pt
scripts/: evaluate.py  run_experiment.py
src/backends/: __init__.py  ibm_runtime.py  simulator.py
src/circuits/: __init__.py  ansatz.py  feature_maps.py  qcnn_layer.py
src/models/: qcnn_classifier.py  qnn.py  vqc_classifier.py
src/training/: callbacks.py  qcnn_trainer.py  trainer.py
src/utils/: io.py  metrics.py  mnist_loader.py  visualization.py
