[project]
name = "paper-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pennylane>=0.45.0",
    "pylatexenc>=2.10",
    "qiskit>=2.4.1",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.47.0",
    "qiskit-machine-learning>=0.9.0",
    "scikit-learn>=1.8.0",
]
